--- a/index.html
+++ b/index.html
@@ -98,6 +98,6 @@
     </footer>
 
     <script src="https://kit.fontawesome.com/70252d9f4b.js" crossorigin="anonymous"></script>
-    <script src="./js/script.js"></script>
+    <script src="./script.js"></script>
     </body>
 </html>
